--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.example.classroom">
 
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -11,8 +12,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ClassRoom">
         <activity
+            android:name=".ui.TestUpload"
+            android:exported="false" />
+        <activity
             android:name=".ui.AddUserActivity"
-            android:exported="false"/>
+            android:exported="false" />
         <activity
             android:name=".ui.HomeActivity"
             android:exported="false" />
@@ -22,8 +26,6 @@
         <activity
             android:name=".ui.SignUpActivity"
             android:exported="true" />
-
-
         <activity
             android:name=".ui.SplashActivity"
             android:exported="true">
